force-app/main/default/objects/RevRecJob__c/RevRecJob__c.object-meta.xml
<CustomObject>
    <description>Scheduler job status</description>
    <label>RevRecJob</label>
    <nameField>
        <label>RevRecJob Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecJobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>