force-app/main/default/objects/RevRecJob__c/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <label>OpportunityID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>