force-app/main/default/objects/RevRecJob__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>