force-app/main/default/objects/RevRecJob__c/fields/status_date__c.field-meta.xml
<CustomField>
    <fullName>status_date__c</fullName>
    <label>status_date</label>
    <type>DateTime</type>
</CustomField>